<?xml version="1.0"?>
<package format="2">
  <name>fake_joint_driver</name>
  <version>0.0.0</version>
  <description>The fake_joint_driver package</description>
  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/fake_joint_driver</url>
  <url type="repository">https://github.com/tork-a/fake_joint_driver</url>
  <url type="bugtracker">https://github.com/tork-a/fake_joint_driver/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>position_controllers</depend>
  <depend>controller_manager</depend>
  <depend>urdf</depend>
  <depend>roscpp</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export></export>
  
</package>
