<?xml version="1.0"?>
<package format="2">
  <name>fake_joint_driver</name>
  <version>0.0.3</version>
  <description>The fake_joint_driver package</description>
  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/fake_joint_driver</url>
  <url type="repository">https://github.com/tork-a/fake_joint</url>
  <url type="bugtracker">https://github.com/tork-a/fake_joint/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <export></export>
  
</package>
