<?xml version="1.0"?>
<package format="2">
  <name>fake_joint_launch</name>
  <version>0.0.2</version>
  <description>Collection of the launch files for fake_joint_driver.</description>
  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/fake_joint_launch</url>
  <url type="repository">https://github.com/tork-a/fake_joint</url>
  <url type="bugtracker">https://github.com/tork-a/fake_joint/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fake_joint_driver</depend>
  <depend>roslaunch</depend>
  <depend>rostest</depend>

  <exec_depend>abb_irb2400_support</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>denso_ros_control</exec_depend>
  <exec_depend>nextage_description</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tra1_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>vs060</exec_depend>

  <export></export>
  
</package>
